Fixes for guides footer on mobile
Also adding further fixes for IE

--- a/app/assets/stylesheets/core.scss
+++ b/app/assets/stylesheets/core.scss
@@ -623,13 +623,29 @@ article {
   display:inline;
   margin-top:-2.7em;
 
-  p{
-    line-height: 1.8em;
-    a{
-      color: $grey-3;
-      height: 1.8em;
+  .inner {
+    padding: 0 2em;
+  }
+
+  @include media(mobile) {
+    margin-left: 0;
+    margin-top: 0;
+    width: 50%;
+
+    .inner {
+      padding: 0 2em 0 0;
     }
-    @include core-16
+
+    p {
+      margin-top: 0;
+      float: none;
+      width: 100%;
+      text-align: right;
+
+      &.print-link a {
+        padding-left: 0;
+      }
+    }
   }
 
   @include ie(6) {
@@ -637,14 +653,13 @@ article {
     zoom: 1;
   }
 
-  .inner {
-    padding: 0 2em;
-  }
-
-  @include media(mobile) {
-    .inner {
-      padding: 0 1em;
+  p{
+    line-height: 1.8em;
+    a{
+      color: $grey-3;
+      height: 1.8em;
     }
+    @include core-16
   }
 }
 
@@ -1471,6 +1486,7 @@ ul.ui-corner-all, ul li a.ui-corner-all {
 .report-a-problem-toggle{
   @include core-16;
   float:left;
+  width: 35%;
   margin:6em 0 0.5em 2em;
   clear:both;
   a{
@@ -1478,9 +1494,9 @@ ul.ui-corner-all, ul li a.ui-corner-all {
   }
 
   @include media(mobile) {
-    margin: -16px 0 0.5em 16px;
-    margin: -1.6rem 0 0.5em 1.6rem;
-    width:33%;
+    margin: 0 0.5em 16px 16px;
+    margin: 0 0.5em 1.6rem 1.6em;
+    width:40%;
   }
 
   @include ie-lte(7) {
